<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_naik_kendaraan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layoutdoa"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="DOA SEBELUM MAKAN"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textColor="@color/coklat"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sebelum_makan"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/textView9" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sebelum_makan_latin"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Artinya :"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sebelum_makan_arti"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/suara"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_audio"
            android:drawablePadding="16dp"
            android:layout_marginTop="16dp"
            android:text="Dengarkan suara"/>

    </LinearLayout>

</RelativeLayout>
